--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <nav class="navigator" id="navigator">
     <a href="#" class="nav-link" id="about-link">[!] About</a>
     <input type="text" id="search-bar" placeholder="Search commands..." class="search-bar" aria-label="Search commands" />
-    <button class="theme-toggle" id="theme-toggle"></button>
   </nav>
+
+  <button class="theme-toggle" id="theme-toggle">🌙</button>
 
   <section class="about-box" id="about-box" aria-hidden="true">
     <button class="close-btn" id="close-about" aria-label="Close about section">&times;</button>
@@ -36,7 +37,7 @@
     </ul>
   </section>
 
-  <!-- Example Contact Section -->
+  <!-- Updated Contact Section -->
   <section class="contact">
     <h2>Contact Us</h2>
     <form>
@@ -44,7 +45,7 @@
       <input type="text" id="name" name="name" placeholder="Your Name" required>
 
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="Your Email" required>
+      <input type="email" id="email" name="email" placeholder="Your Email" value="priyanshikaurji@gmail.com" required>
 
       <label for="message">Message</label>
       <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
