--- a/index.html
+++ b/index.html
@@ -2,49 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Command Categories</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Command Categories</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <nav class="navigator" id="navigator">
-    <a href="#" class="nav-link" id="about-link">[!] About</a>
-    <input type="text" id="search-bar" placeholder="Search commands..." class="search-bar" aria-label="Search commands" />
-  </nav>
+    <nav class="navigator" id="navigator">
+        <a href="#" class="nav-link" id="about-link">[!] About</a>
+        <input type="text" id="search-bar" placeholder="Search commands..." class="search-bar"
+            aria-label="Search commands" />
+    </nav>
 
-  <section class="about-box" id="about-box" aria-hidden="true">
-    <button class="close-btn" id="close-about" aria-label="Close about section">&times;</button>
-    <h2>About</h2>
-    <p>This guide was created by **VM/AM**. It is designed to help you navigate various commands in a stylish and interactive manner. Enjoy exploring!</p>
-    <ul>
-      <li><strong>Discord:</strong> <a href="https://discord.com/invite/NTTXKCuv" target="_blank">cherry_yuki0</a></li>
-      <li><strong>Facebook:</strong> <a href="https://facebook.com/vmam69" target="_blank">VM/AM</a></li>
-      <li><strong>YouTube:</strong> <a href="https://youtube.com/@theanonlyricist" target="_blank">The Anon Lyricist</a></li>
-    </ul>
-  </section>
+    <section class="about-box" id="about-box" aria-hidden="true">
+        <button class="close-btn" id="close-about" aria-label="Close about section">&times;</button>
+        <h2>About</h2>
+        <p>This guide was created by **VM/AM**. It is designed to help you navigate various commands in a stylish and
+            interactive manner. Enjoy exploring!</p>
+        <ul>
+            <li><strong>Discord:</strong> <a href="https://discord.com/invite/NTTXKCuv" target="_blank">cherry_yuki0</a></li>
+            <li><strong>Facebook:</strong> <a href="https://facebook.com/vmam69" target="_blank">VM/AM</a></li>
+            <li><strong>YouTube:</strong> <a href="https://youtube.com/@theanonlyricist" target="_blank">The Anon Lyricist</a></li>
+        </ul>
+    </section>
 
-  <!-- Example Contact Section -->
-  <section class="contact">
-    <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/your-form-id" method="POST">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" placeholder="Your Name" required>
+    <!-- Example Contact Section -->
+    <section class="contact">
+        <h2>Contact Us</h2>
+        <form action="https://formspree.io/f/your-form-id" method="POST">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="Your Email" required>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
 
-      <label for="message">Message</label>
-      <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
 
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
 
-  <button class="theme-toggle" id="theme-toggle"></button>
+    <!-- Circular Theme Toggle Button -->
+    <button class="theme-toggle" id="theme-toggle"></button>
 
-  <script src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
