--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
 <body>
     <nav class="navigator" id="navigator">
         <a href="#" class="nav-link" id="about-link">[!] About</a>
-        <input type="text" id="search-bar" placeholder="Search commands..." class="search-bar"
-            aria-label="Search commands" />
+        <input type="text" id="search-bar" placeholder="Search commands..." class="search-bar" aria-label="Search commands" />
     </nav>
 
     <section class="about-box" id="about-box" aria-hidden="true">
         <button class="close-btn" id="close-about" aria-label="Close about section">&times;</button>
         <h2>About</h2>
-        <p>This guide was created by **VM/AM**. It is designed to help you navigate various commands in a stylish and
-            interactive manner. Enjoy exploring!</p>
+        <p>This guide was created by **VM/AM**. It is designed to help you navigate various commands in a stylish and interactive manner. Enjoy exploring!</p>
         <ul>
             <li><strong>Discord:</strong> <a href="https://discord.com/invite/NTTXKCuv" target="_blank">cherry_yuki0</a></li>
             <li><strong>Facebook:</strong> <a href="https://facebook.com/vmam69" target="_blank">VM/AM</a></li>
             <li><strong>YouTube:</strong> <a href="https://youtube.com/@theanonlyricist" target="_blank">The Anon Lyricist</a></li>
+        </ul>
+    </section>
+
+    <section class="category" data-description="Gemini related commands">
+        <h3>Gemini</h3>
+        <ul>
+            <li><a href="#" class="link">Link1</a>: Description of Gemini Link1</li>
+            <li><a href="#" class="link">Link2</a>: Description of Gemini Link2</li>
+            <li><a href="#" class="link">Link3</a>: Description of Gemini Link3</li>
+            <li><a href="#" class="link">Get API Key</a></li>
         </ul>
     </section>
 
