--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <section class="contact">
         <h2>Contact Us</h2>
-        <form action="https://formspree.io/f/2542000229939412488" method="POST">
+        <form action="https://formspree.io/f/mnnabqjy" method="POST">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Your Name" required>
 
