--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <section class="contact">
         <h2>Contact Us</h2>
-        <form action="https://formspree.io/f/mnnabqjy" method="POST">
+        <form id="contact-form">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Your Name" required>
 
@@ -49,6 +49,7 @@
 
             <button type="submit">Send Message</button>
         </form>
+        <div id="form-response" class="form-response"></div>
     </section>
 
     <button class="theme-toggle" id="theme-toggle"></button>
